@@ -21,14 +21,14 @@ import java.util.*;
 public class BFS {
 
     public static void main(String[] args) {
-        Map<String, List<String>> graph = new HashMap<String, List<String>>() {{
-            put("A", Arrays.asList("B"));
-            put("B", Arrays.asList("C", "D", "F"));
-            put("C", Arrays.asList("E"));
-            put("D", Arrays.asList("F"));
-            put("E", Arrays.asList("F"));
-            put("F", Arrays.asList("G"));
-        }};
+        Map<String, List<String>> graph = Map.of(
+            "A", List.of("B"),
+            "B", List.of("C", "D", "F"),
+            "C", List.of("E"),
+            "D", List.of("F"),
+            "E", List.of("F"),
+            "F", List.of("G")
+        );
         List<String> shortestPath = findShortestPath("A", "G", graph);
         System.out.println("The shortest path from A to G is " + shortestPath);
     }
@@ -37,11 +37,11 @@ public class BFS {
                                                  String targetPoint,
                                                  Map<String, List<String>> graph) {
         Queue<LinkedList<String>> queue = new LinkedList<>();
-        queue.offer(list(startPoint));
+        queue.offer(asList(startPoint));
         while (!queue.isEmpty()) {
             LinkedList<String> pathToCurrentPoint = queue.poll();
             String currentPoint = pathToCurrentPoint.getLast();
-            if (currentPoint == targetPoint) {
+            if (currentPoint.equals(targetPoint)) {
                 return pathToCurrentPoint;
             }
             for (String connectedPoint : graph.get(currentPoint)) {
@@ -53,11 +53,9 @@ public class BFS {
         throw new RuntimeException("There is no path from " + startPoint + " to " + targetPoint);
     }
 
-    private static LinkedList<String> list(String... items) {
-        LinkedList<String> list = new LinkedList<>();
-        for (String item : items) {
-            list.add(item);
-        }
-        return list;
+    private static LinkedList<String> asList(String item) {
+        return new LinkedList<>() {{
+            add(item);
+        }};
     }
 }
